# malsmug

./: .env  .env.example  .gitignore  Cargo.toml  build.rs  docker-compose.yaml  findings.md  license  readme.md
config/: rabbitmq.yaml
dast/: package.json  tsconfig.json
dast/default_samples/: default.js
dast/src/: app.ts  hooks.ts  lure.ts
docker/: js_dast_Dockerfile  js_dast_entrypoint.sh  js_sandbox_Dockerfile  js_sandbox_entrypoint.sh  sandbox_Dockerfile  sandbox_entrypoint.sh
js-samples/: file1.js  file2.js  file2_readable.js  file3.js  file3_readable.js  file_test.js
migrations/: 20250623011546_create_file_analysis_report.sql
sandbox/: .dockerignore  package-lock.json  package.json  tsconfig.json
sandbox/consumer/: main.py  requirements.txt
sandbox/default_samples/: default.js
sandbox/src/: app.ts  const.ts  hooks.ts  lure.ts  rbmq.ts  types.ts  utils.ts
src/: analyzer.rs  bootstrap.rs  dast.rs  dast_event_types.rs  main.rs  sast.rs  utils.rs
src/analysis/: analyzer.rs  dast.rs  dast_event_types.rs  dast_ioc_types.rs  mod.rs  sast.rs
src/app/: mod.rs  rabbitclient.rs  types.rs
src/integrations/: mod.rs  virus_total.rs
src/server/: mod.rs  rabbitclient.rs  types.rs
src/store/: mod.rs  models.rs  sqlite.rs
