[package]
name = "malsmug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-std = { version = "1.13.1", features = ["tokio1"] }
axum = {version = "0.8.4", features = ["multipart"]}
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.7"
log = "0.4.27"
multipart = {version = "0.18.0", features = ["client"]}
oxc = { version = "0.75.0", features = ["ast_visit", "serialize"] }
publicsuffix = "2.3.0"
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1" 
url = "2.5.4"
uuid = {version = "1.17.0", features = ["v4"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"]}
libsqlite3-sys = "=0.30.1"
async-trait = "0.1.88"
saphyr = "0.0.6"
yaml-rust2 = "0.10.3"
serde_yaml = "0.9.34"
lapin = "3.0.0"
rmp = "0.8.14"
rmp-serde = "1.3.0"
sha256 = "1.6.0"
# sqlx = { version = "=0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"]}
# libsqlite3-sys = "0.34.0"
